build: basic header elements

--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,18 @@
 
+
+.profilePic {
+    height: 400px;
+    width: 400px;
+}
+
+.pdfIcon {
+    height: 30px;
+}
+
+.githubIcon {
+    height: 30px;
+}
+
+.linkedInIcon {
+    height: 30px;
+}
