--- a/styles.css
+++ b/styles.css
@@ -1,10 +1,34 @@
-
-
-.profilePic {
-    height: 400px;
-    width: 400px;
+body {
+    font-family: "Rubik", sans-serif;
+    font-optical-sizing: auto;
+    font-weight: 12px;
+    font-style: normal;
+    align-items: center;
 }
 
+.profilePic {
+    height: 320px;
+    width: 320px;
+}
+
+.nameOnImage {
+    position: fixed;
+    top: 220px;
+    left: 12px;
+    color:white;
+    font-size: 36px;
+    text-wrap: wrap;
+}
+
+.aboutMeHeader {
+    width: 320px;
+    text-align:center;
+    font-size: 28px;
+}
+
+.aboutMeText {
+    width: 320px;
+}
 .pdfIcon {
     height: 30px;
 }
