--- a/styles.css
+++ b/styles.css
@@ -170,11 +170,10 @@ html {
 
 /* TABLET --- 600-1000px */
 
-@media (min-width: 600px) {
+@media (min-width: 600px) and (max-width:1000px) {
     /* HEADER --- TABLET */
 
     .aboutMe {
-
         margin-bottom: 40px;
         border-top: 2px solid #C2C2C2;
         background: linear-gradient(
@@ -182,7 +181,7 @@ html {
           transparent 50.5%,
           #5DCAD3 50%
         );
-        max-width: 1000px;
+        width: 1000px;
     }
     
     .profilePic {
@@ -215,91 +214,102 @@ html {
         padding-top: 40px;
         padding-bottom: 20px;
         text-align: center;
-        font-size: 32px;
+        font-size: 36px;
     }
     
     .aboutMeText {
         margin-left: 5%;
         margin-right: 5%;
+        font-size: 20px;
         text-align: justify;
     }
     
     .iconsHeader {
         display:flex;
-        margin-left: 12%;
-        margin-right: 18%;
+        margin-right: 22px;
         justify-content: end;
     }
     
     .githubIcon {
-        height: 30px;
-        vertical-align:middle;
+        height: 38px;
         margin-right: 10px;
+        margin-bottom: 20px;
     }
     
     .linkedInIcon {
-        height: 30px;
-        vertical-align:middle;
+        height: 40px;
     }
 
-    /* PROJECTS CARDS --- PHONE */
+    /* PROJECTS CARDS --- TABLET */
+
+    .main {
+        width: 1000px;
+    }
 
     .projectsTitle {
         margin-left: auto;
         margin-right: auto;
+        margin-top: 60px;
+        margin-bottom: 50px;
         text-align:center;
-        font-size: 32px;
+        font-size: 40px;
     }
     
     .projects {
         display:grid;
+        grid-template-columns: repeat(auto-fit, minmax(350px, 400px));
+        grid-auto-rows: 450px;
         gap: 40px;
+        justify-content:center;
     }
     
     .card {
-        width: 320px;
-        border: 1px black solid;
+        width: 400px;
         margin-left: auto;
         margin-right: auto;
+        border: 1px solid black;
+        box-shadow: 4px 4px 10px;
     }
     
     .image {
-        width: 100%;
-        height: 200px;
+        width: 400px;
+        height: 256px;
     }
     
     .projectInfo {
         display:grid;
-        grid-template: 50px 100px / 270px 50px;
+        grid-template: 60px 100px / 340px 20px;
     }
     
     .projectName {
         margin-left: 50px;
+        font-size: 28px;
     }
     
     .projectCodeIcon {
-        height: 28px;
+        height: 36px;
         position: relative;
-        top: 10px;
+        top: 25px;
+
     }
     
     .projectDescript {
-        margin-left: 20px;
-        margin-right: 20px;
+        margin-left: 30px;
+        font-size: 19px;
         grid-column-start: 1;
         grid-column-end: 3;
     }
 
-    /* CONTACT --- PHONE*/
+    /* CONTACT --- TABLET*/
 
     .footer-contact {
-        background-color: rgb(170, 147, 121);
+        background-color: #5DCAD3
     }
     
     .contactTitle {
         text-align: center;
         padding-top: 20px;
-        font-size: 32px;
+        font-size: 40px;
     }
     
     .phoneContact {
@@ -309,23 +319,25 @@ html {
     }
     
     .phoneIcon {
-        height: 20px;
+        height: 40px;
         margin-right: 5px;
+        margin-left: 30px;
     }
     
     .phoneNumber {
         margin:0;
+        vertical-align:bottom;
     }
     
     .emailContact {
         margin-left: 30px;
         display: flex;
-        margin-bottom: 20px;
-    }
+        margin-bottom: 20px;  }
     
     .emailIcon {
-        height: 20px;
+        height: 40px;
         margin-right: 5px;
+        margin-left: 30px;
     }
     
     .email {
@@ -333,7 +345,7 @@ html {
     }
     
     .linkIconsFooter {
-        margin-left: 80%;
+        margin-left: 85%;
         padding-bottom: 20px;
     }
 }
