--- a/styles.css
+++ b/styles.css
@@ -5,12 +5,6 @@ body {
     font-style: normal;
 }
 
-/* html {
-    max-width: 1200px;
-    margin:auto;
-} */
-
-/* PHONE - 320-600px */
 
 @media (max-width: 600px) {
 
@@ -170,7 +164,7 @@ body {
 
 /* TABLET --- 600-1000px */
 
-@media (min-width: 600px) and (max-width:1000px) {
+@media (min-width: 600px) and (max-width:1250px) {
     /* HEADER --- TABLET */
 
     .aboutMe {
@@ -360,7 +354,7 @@ body {
 
 /* LAPTOP --- 1000px+ */
 
-@media (min-width: 1000px) {
+@media (min-width: 1250px) {
 
     /* ABOUT ME --- LAPTOP */
 
@@ -379,34 +373,39 @@ body {
     
     .profilePic {
         float: left;
-        margin-left: 5%;
-        margin-top: 5%;
+        position: relative;
+        margin-left: 10%;
+        margin-top: 100px;
         margin-right: 2%;
-        max-width: 450px;
+        max-width: 500px;
         box-shadow: 2px 2px 5px;
+        z-index: 1;
     }
     
     .nameOnImage {
         color: white;
         font-size: 52px;
-        transform: translate(10px, 20px);
+        transform: translate(-520px, 89px);
         text-shadow: 3px 4px 6px black;
+        position: relative;
+        z-index: 1;
     }
 
     .aboutMeSection {
-        width: 800px;
-        height: auto;
+        width: 50%;
+        height: 400px;
         font-size: 18px;
         background-color: white;
         box-shadow:5px;
-        margin-left: 120px;
+        margin-left: 600px;
         padding-bottom: 20px;
         box-shadow: 2px 2px 5px;
+        transform: translate(0px, -55px);
     }
     
     .aboutMeHeader {
         padding-top: 40px;
-        padding-bottom: 28px;
+        padding-bottom: 18px;
         text-align: center;
         font-size: 36px;
     }
@@ -420,7 +419,7 @@ body {
     
     .iconsHeader {
         display:flex;
-        margin-right: 22px;
+        margin-right: 40px;
         justify-content: end;
     }
     
@@ -518,7 +517,7 @@ body {
     .phoneIcon {
         height: 40px;
         margin-right: 10px;
-        margin-left: 220px;
+        margin-left: 240px;
     }
     
     .phoneNumber {
@@ -534,7 +533,7 @@ body {
     .emailIcon {
         height: 40px;
         margin-right: 10px;
-        margin-left: 220px;
+        margin-left: 240px;
     }
     
     .email {
